feat: 更新第1章环境搭建和第5/6/7章参考资源
- 第1章: 修复mathlib/dsplib导入错误解决方法(CCS Theia Product discovery-path)
- 第1章: 更新1.2.2节，确认无需手动配置路径变量
- 大纲: 第5章新增TI官方调优指南(Point Cloud Tuning, Parameter Tuning)
- 大纲: 第6章新增Reference Zone概念复用说明
- 大纲: 第7章新增TI区域定义工具(cuboidDef CLI格式)
- 大纲: 附录E新增TI InCabin Demo官方文档索引
- 新增: 开发记录和CCS workspace文件

--- a/项目文档/3-固件工具/08-AWRL6844雷达健康检测实现方案/AWRL6844雷达健康检测-03-实施目录大纲.md
+++ b/项目文档/3-固件工具/08-AWRL6844雷达健康检测实现方案/AWRL6844雷达健康检测-03-实施目录大纲.md
@@ -221,6 +221,29 @@ project-code/AWRL6844_HealthDetect/
 - `项目文档/3-固件工具/05-雷达配置参数研究/雷达配置文件深度分析_v2.0_Part1.md`
 - `项目文档/4-测试实验结果/2.雷达配置实际测试结果.md`
 
+#### ⭐ TI官方调优指南（必读）
+
+> **重要**：以下TI官方文档包含经过验证的参数调优经验，开发时必须参考！
+
+| 文档 | 知识库位置 | 关键内容 |
+|------|-----------|---------|
+| **Point Cloud Tuning Guide** | `知识库/知识库PDF转机器可读文件/AWRL6844_CPD_&_SBR_Point_Cloud_Tuning_Guide.md` | 相位校准、传感器安装位置、sensorPosition CLI |
+| **Parameter Tuning Guide** | `知识库/知识库PDF转机器可读文件/Parameter_Tuning_Guide_for_Intrusion_Detection_Demo.md` | CFAR配置、杂波移除、天线模式补偿 |
+
+**必须参考的调优步骤**：
+
+1. **相位校准（Phase Calibration）**
+   - 参考SDK用户指南的Rx Gain Measurement Compensation章节
+   - 提升点云质量的关键步骤
+
+2. **CFAR参数配置**
+   - 参考 Parameter Tuning Guide 的 Section 2.2 CFAR Configuration
+   - 调整检测阈值减少漏检/误检
+
+3. **杂波移除配置**
+   - 参考 Parameter Tuning Guide 的 Section 2.3 Clutter Removal Configuration
+   - 静态杂波过滤参数优化
+
 ---
 
 ### 第6章 背景学习开发 - 目录变更详情
@@ -257,6 +280,21 @@ project-code/AWRL6844_HealthDetect/
 | `src/background_learn.h` | 🆕 新建 | 自主设计 | SDK Flash API | 背景学习接口 |
 | `src/background_learn.c` | 🆕 新建 | 自主设计 | SDK Flash API | 背景学习实现 |
 | `src/health_detect.c` | 🔧 修改 | 第4章产物 | background_learn.* | 集成背景过滤 |
+
+#### ⭐ TI官方参考：Reference Zone概念
+
+> **重要**：TI入侵检测Demo中的"Reference Zone"概念可直接复用于背景学习！
+
+| 概念 | TI原始用途 | 健康检测复用 |
+|------|-----------|-------------|
+| **Reference Zone** | 车内中心区域作为非占用参考 | 静态背景区域 |
+| **Target Zone** | 边界区域检测入侵 | 活动检测区域 |
+| **SNR对比** | 目标区vs参考区SNR差异 | 动态目标vs背景差异 |
+
+**参考文档**：
+- `知识库/知识库PDF转机器可读文件/Parameter_Tuning_Guide_for_Intrusion_Detection_Demo.md`
+  - Section 1: Introduction - Figure 2 区域定义概念
+  - High-Level Processing 中的 Reference Zone 与 Target Zone 对比逻辑
 
 ---
 
@@ -295,10 +333,59 @@ project-code/AWRL6844_HealthDetect/
 
 | 文件 | 操作 | 来源/参考 | 依赖 | 用途 |
 |------|------|----------|------|------|
-| `src/zone_config.h` | 🆕 新建 | 自主设计 | - | 区域配置接口 |
-| `src/zone_config.c` | 🆕 新建 | 自主设计 | SDK Flash API | 区域配置实现 |
+| `src/zone_config.h` | 🆕 新建 | 参考TI cuboidDef格式 | - | 区域配置接口 |
+| `src/zone_config.c` | 🆕 新建 | 参考TI区域定义CLI | SDK Flash API | 区域配置实现 |
 | `src/fall_detect.c` | 🔧 修改 | 第4章产物 | zone_config.* | 区域联动 |
-| `radar_config_file/zone_default.cfg` | 🆕 新建 | 自主设计 | - | 默认区域 |
+| `radar_config_file/zone_default.cfg` | 🆕 新建 | 参考TI zoneDefinitionGenTool | - | 默认区域 |
+
+#### ⭐ TI官方区域定义工具（关键参考）
+
+> **重要**：TI提供了完整的区域定义工具和CLI格式，可直接复用！
+
+**工具位置**：
+```
+C:\ti\radar_toolbox_3_30_00_06\source\ti\examples\
+  Automotive_InCabin_Security_and_Safety\AWRL6844_InCabin_Demos\
+  docs\Seat_Belt_Reminder\zoneDefinitionGenTool.xlsx
+```
+
+**TI区域定义CLI格式**（直接复用）：
+
+| CLI命令 | 参数 | 说明 |
+|---------|------|------|
+| `sensorPosition` | xOffset yOffset zOffset azimTilt elevTilt | 传感器安装位置 |
+| `cuboidDef` | zoneId subZoneId xMin xMax yMin yMax zMin zMax | 3D立方体区域定义 |
+
+**TI区域定义示例**（从zoneDefinitionGenTool.xlsx提取）：
+```
+# 传感器位置
+sensorPosition 0 0.7 1.1 0 -59
+
+# 区域定义格式：cuboidDef zoneId subZoneId xMin xMax yMin yMax zMin zMax
+# Zone 0 - 驾驶座
+cuboidDef 0 0 0.15 0.7 0.45 1.06 0.6 1.2    # body区域
+cuboidDef 0 1 0.15 0.7 0.1 0.9 0.3 0.6      # leg区域
+cuboidDef 0 2 0.15 0.7 -0.2 0.5 -0.2 0.3    # footwell区域
+```
+
+**健康检测场景区域设计**（基于TI格式扩展）：
+```
+# 室内健康检测场景区域定义示例
+# Zone 0 - 床区（降低跌倒检测灵敏度）
+cuboidDef 0 0 -1.0 1.0 0.0 2.0 0.0 0.8      # 床面区域
+
+# Zone 1 - 活动区（正常跌倒检测）
+cuboidDef 1 0 -2.0 2.0 2.0 5.0 0.0 2.0      # 主活动区域
+
+# Zone 2 - 入口区
+cuboidDef 2 0 -1.5 1.5 5.0 6.0 0.0 2.0      # 门口区域
+```
+
+**参考文档**：
+- `知识库/知识库PDF转机器可读文件/Parameter_Tuning_Guide_for_Intrusion_Detection_Demo.md`
+  - Section 2.3.1 Scene Configuration
+  - Figure 2: 区域划分概念图
+- TI E2E论坛：区域配置最佳实践
 
 ---
 
@@ -1354,20 +1441,45 @@ AWRL6844_HealthDetect/
 
 ---
 
+### E.2.3 ⭐ TI InCabin Demo 官方文档（新增）
+
+> **位置**：`知识库/知识库PDF转机器可读文件/` 和 SDK docs目录
+> **重要性**：这些是TI官方调优指南，包含经过验证的参数配置经验！
+
+| 文档 | 知识库位置 | 参考价值 | 适用章节 |
+|------|-----------|---------|---------|
+| **AWRL6844_CPD_&_SBR_Point_Cloud_Tuning_Guide.md** | `知识库/知识库PDF转机器可读文件/` | ⭐⭐⭐⭐⭐ **最高** | 📖 **第5章**：相位校准、传感器安装、sensorPosition CLI |
+| **AWRL6844_CPD_&_SBR_Test_Results.md** | `知识库/知识库PDF转机器可读文件/` | ⭐⭐⭐⭐ 高 | 📖 **第10章**：TI官方测试数据、准确率参考 |
+| **Parameter_Tuning_Guide_for_Intrusion_Detection_Demo.md** | `知识库/知识库PDF转机器可读文件/` | ⭐⭐⭐⭐⭐ **最高** | 📖 **第5/6/7章**：CFAR配置、杂波移除、区域划分 |
+| **AWRL6844_Intruder_Detection_Testing.md** | `知识库/知识库PDF转机器可读文件/` | ⭐⭐⭐ 中等 | 📖 **第10章**：入侵检测测试方法参考 |
+| **zoneDefinitionGenTool.xlsx** | SDK docs/Seat_Belt_Reminder/ | ⭐⭐⭐⭐⭐ **最高** | 📖 **第7章**：区域定义CLI格式、cuboidDef命令 |
+
+**关键文档内容速览**：
+
+| 文档 | 关键章节 | 直接可用内容 |
+|------|---------|-------------|
+| **Point Cloud Tuning Guide** | Step 1-3 | 相位校准流程、sensorPosition CLI参数 |
+| **Parameter Tuning Guide** | Section 2.2 | CFAR阈值配置表 |
+| **Parameter Tuning Guide** | Section 2.3 | Clutter Removal参数 |
+| **Parameter Tuning Guide** | Section 2.3.1 | Zone定义方法（Target Zone vs Reference Zone） |
+| **zoneDefinitionGenTool.xlsx** | 全表 | cuboidDef CLI格式、区域坐标计算公式 |
+
+---
+
 ### E.3 参考资料与章节对应关系
 
 | 章节 | 必读参考 | 备用参考 |
 |------|---------|--------|
-| **第1章 环境搭建** | SDK安装文档 | Migration索引(硬件对比) |
+| **第1章 环境搭建** | SDK安装文档、InCabin Demo User Guide | Migration索引(硬件对比) |
 | **第2章 人存检测** | InCabin Demo源码 | motion_detect.c |
 | **第3章 姿态检测** | ⭐ **pose.c/h**、**数据集** | dpc.c |
 | **第4章 跌倒检测** | ⭐ **fall_detection.html**、pose.c | Migration Part3(相位) |
-| **第5章 杂波移除** | SDK MTI参数 | - |
-| **第6章 背景学习** | 自主设计 | - |
-| **第7章 区域划分** | 自主设计 | - |
+| **第5章 杂波移除** | ⭐ **Point Cloud Tuning Guide**、**Parameter Tuning Guide** Section 2.2-2.3 | SDK MTI参数 |
+| **第6章 背景学习** | ⭐ **Parameter Tuning Guide** (Reference Zone概念) | 自主设计扩展 |
+| **第7章 区域划分** | ⭐ **zoneDefinitionGenTool.xlsx**、**Parameter Tuning Guide** Section 2.3.1 | cuboidDef格式参考 |
 | **第8章 呼吸检测** | IWR6843 Vital Signs Demo | - |
 | **第9章 人数统计** | SDK 3D_people_tracking | - |
-| **第10章 综合测试** | ⭐ **数据集**、**实验案例** | 验收标准参考 |
+| **第10章 综合测试** | ⭐ **数据集**、**CPD_SBR_Test_Results**、**实验案例** | 验收标准参考 |
 
 ---
 
