--- a/项目文档/3-固件工具/08-AWRL6844雷达健康检测实现方案/AWRL6844雷达健康检测-04-第1章-环境搭建.md
+++ b/项目文档/3-固件工具/08-AWRL6844雷达健康检测实现方案/AWRL6844雷达健康检测-04-第1章-环境搭建.md
@@ -44,15 +44,15 @@
 
 ### 1.1.1 开发工具版本要求
 
-| 工具 | 版本 | 说明 | 状态 |
-|------|------|------|------|
-| **Code Composer Studio (CCS)** | 20.4.0 (ccs2040) | TI嵌入式开发IDE | ✅ 已安装 |
-| **MMWAVE_L_SDK** | 06_01_00_01 | 毫米波SDK | ✅ 已安装 |
-| **Radar Toolbox** | 3.30.00.06 | 雷达开发工具包 | ✅ 已安装 |
-| **SDK Visualizer** | 6.0.5.1 | ⭐ **首选推荐烧录工具**（GUI） | ✅ 已安装 |
-| **项目flash_tool.py** | v1.4.1 | 自动化烧录工具（封装arprog） | ✅ 已安装 |
-| **SysConfig** | 1.20.0 | 系统配置工具 | ✅ 已安装 |
-| **mmWave Studio** | 04.03.01.00 | RF测试工具 | ✅ 已安装 |
+| 工具                                 | 版本             | 说明                                | 状态      |
+| ------------------------------------ | ---------------- | ----------------------------------- | --------- |
+| **Code Composer Studio (CCS)** | 20.4.0 (ccs2040) | TI嵌入式开发IDE                     | ✅ 已安装 |
+| **MMWAVE_L_SDK**               | 06_01_00_01      | 毫米波SDK                           | ✅ 已安装 |
+| **Radar Toolbox**              | 3.30.00.06       | 雷达开发工具包                      | ✅ 已安装 |
+| **SDK Visualizer**             | 6.0.5.1          | ⭐**首选推荐烧录工具**（GUI） | ✅ 已安装 |
+| **项目flash_tool.py**          | v1.4.1           | 自动化烧录工具（封装arprog）        | ✅ 已安装 |
+| **SysConfig**                  | 1.20.0           | 系统配置工具                        | ✅ 已安装 |
+| **mmWave Studio**              | 04.03.01.00      | RF测试工具                          | ✅ 已安装 |
 
 > **📍 安装路径**: `C:\ti\`
 
@@ -61,16 +61,19 @@
 #### ✅ 已安装确认
 
 **安装路径**：
+
 ```
 C:\ti\ccs2040\
 ```
 
 **备份资源**（如需重装）：
+
 ```
 知识库/雷达模块/IDE/CCS_20.4.0.00013_win.zip
 ```
 
 **官方下载**：
+
 - [Code Composer Studio 下载页面](https://www.ti.com/tool/CCSTUDIO)
 
 #### 验证安装
@@ -94,11 +97,11 @@ CCS验证步骤：
 
 #### ✅ 已安装确认
 
-| 属性 | 值 |
-|------|-----|
-| SDK版本 | **MMWAVE_L_SDK_06_01_00_01** |
-| 目标芯片 | AWRL6844 (xWRL6844) |
-| 安装路径 | `C:\ti\MMWAVE_L_SDK_06_01_00_01` |
+| 属性     | 值                                   |
+| -------- | ------------------------------------ |
+| SDK版本  | **MMWAVE_L_SDK_06_01_00_01**   |
+| 目标芯片 | AWRL6844 (xWRL6844)                  |
+| 安装路径 | `C:\ti\MMWAVE_L_SDK_06_01_00_01`   |
 | 官方下载 | https://www.ti.com/tool/MMWAVE-L-SDK |
 
 #### 验证安装
@@ -133,11 +136,13 @@ C:\ti\MMWAVE_L_SDK_06_01_00_01/
 #### ✅ 已安装确认
 
 **安装路径**：
+
 ```
 C:\ti\radar_toolbox_3_30_00_06\
 ```
 
 **备份资源**：
+
 ```
 知识库/雷达模块/RADAR-TOOLBOX/radar_toolbox_3_30_00_06/
 ```
@@ -162,33 +167,35 @@ C:\ti\radar_toolbox_3_30_00_06/
 
 #### 烧录工具对比
 
-| 工具 | 类型 | 推荐程度 | 适用场景 |
-|------|------|---------|----------|
-| **SDK Visualizer** | GUI | ⭐⭐⭐ 首选 | 日常开发、调试、初学者 |
-| **项目flash_tool.py** | GUI+CLI | ⭐⭐ 推荐 | 批量烧录、自动化、生产 |
-| **arprog_cmdline_6844** | CLI | ⭐ 底层 | 被上层工具封装调用 |
-| ~~UniFlash~~ | GUI | ❌ 不推荐 | AWRL6844兼容性差 |
+| 工具                          | 类型    | 推荐程度    | 适用场景               |
+| ----------------------------- | ------- | ----------- | ---------------------- |
+| **SDK Visualizer**      | GUI     | ⭐⭐⭐ 首选 | 日常开发、调试、初学者 |
+| **项目flash_tool.py**   | GUI+CLI | ⭐⭐ 推荐   | 批量烧录、自动化、生产 |
+| **arprog_cmdline_6844** | CLI     | ⭐ 底层     | 被上层工具封装调用     |
+| ~~UniFlash~~                 | GUI     | ❌ 不推荐   | AWRL6844兼容性差       |
 
 #### ⭐ 首选推荐：SDK Visualizer
 
 **工具位置**：
+
 ```
 C:\ti\MMWAVE_L_SDK_06_01_00_01\tools\visualizer\visualizer.exe
 ```
 
 **为什么推荐SDK Visualizer**：
 
-| 优势 | 说明 |
-|------|------|
-| ✅ **TI官方集成** | SDK自带，版本完全匹配 |
-| ✅ **一体化功能** | 烧录 + 配置发送 + 可视化 + 功耗估算 |
-| ✅ **自动SOP处理** | 自动提示切换FUNCTIONAL/FLASHING模式 |
-| ✅ **版本检测** | 自动检测固件版本是否匹配 |
-| ✅ **E2E成功案例** | TI论坛UniFlash失败后用Visualizer成功 |
-| ✅ **初学者友好** | TI工程师推荐给初学者 |
-| ✅ **预置配置** | 自带预置配置文件，快速测试 |
+| 优势                    | 说明                                 |
+| ----------------------- | ------------------------------------ |
+| ✅**TI官方集成**  | SDK自带，版本完全匹配                |
+| ✅**一体化功能**  | 烧录 + 配置发送 + 可视化 + 功耗估算  |
+| ✅**自动SOP处理** | 自动提示切换FUNCTIONAL/FLASHING模式  |
+| ✅**版本检测**    | 自动检测固件版本是否匹配             |
+| ✅**E2E成功案例** | TI论坛UniFlash失败后用Visualizer成功 |
+| ✅**初学者友好**  | TI工程师推荐给初学者                 |
+| ✅**预置配置**    | 自带预置配置文件，快速测试           |
 
 **官方文档**：
+
 ```
 C:\ti\MMWAVE_L_SDK_06_01_00_01\docs\Low_Power_Visualizer_User_Guide.pdf
 ```
@@ -196,12 +203,14 @@ C:\ti\MMWAVE_L_SDK_06_01_00_01\docs\Low_Power_Visualizer_User_Guide.pdf
 #### 项目flash_tool.py（自动化场景）
 
 **工具位置**：
+
 ```
 项目文档/3-固件工具/01-AWRL6844固件系统工具/5-Scripts/flash_tool.py
 ```
 
 **特点**：
-- 封装了`arprog_cmdline_6844.exe`
+
+- 封装了 `arprog_cmdline_6844.exe`
 - 支持批量烧录、固件智能匹配
 - 适合生产和自动化测试
 
@@ -249,39 +258,94 @@ Radar Toolbox根目录/
 
 #### CCS导入步骤
 
+> ⚠️ **重要**：必须选择**整个src目录**，而不是单独的子目录！
+>
+> ⚠️ **CCS版本说明**：CCS 20.4 是基于 Theia/VS Code 的新版本，菜单与旧版Eclipse不同！
+
+**正式导入步骤**
+
 ```
 步骤1: 打开CCS
-步骤2: File → Import → CCS Projects
-步骤3: 选择搜索目录：
-        {RADAR_TOOLBOX}/source/ti/examples/Automotive_InCabin_Security_and_Safety/AWRL6844_InCabin_Demos/src/system
-步骤4: 选中 "demo_in_cabin_sensing_6844_system"
+步骤2: 文件 → 导入 → CCS Projects（或 Project → Import CCS Projects）
+    
+步骤3: 选择搜索目录（⭐ 选择整个src目录）：
+        C:\ti\radar_toolbox_3_30_00_06\source\ti\examples\
+        Automotive_InCabin_Security_and_Safety\AWRL6844_InCabin_Demos\src
+    
+步骤4: CCS会自动发现3个工程，全部勾选：
+        ☑ demo_in_cabin_sensing_6844_system  ← 系统工程（主工程）
+        ☑ demo_in_cabin_sensing_6844_mss     ← MSS工程（R5F核心）
+        ☑ demo_in_cabin_sensing_6844_dss     ← DSS工程（C66x核心）
+    
 步骤5: 点击 Finish
 ```
 
-### 1.2.2 配置路径变量
+> 💡 **常见问题1**：如果只选择 `src/system` 目录，CCS可能找不到工程。
+>
+> **解决方法**：向上一级，选择整个 `src` 目录，让CCS自动扫描所有子目录。
 
-#### 需要配置的路径变量
+> ⚠️ **常见问题2**：导入时报错 `Product ti.mathlib.c66x v0.0 is not currently installed`
+>
+> **完整错误信息**：
+>
+> ```
+> Problems importing projects:
+> Product ti.mathlib.c66x v0.0 is not currently installed and no compatible version is available.
+> Product ti.mas.dsplib.c66x v0.0 is not currently installed and no compatible version is available.
+> Please install this product or a compatible version.
+> ```
+>
+> **原因**：CCS未识别SDK中自带的mathlib/dsplib库路径
+>
+> **✅ 解决方法**（CCS 20.4 Theia版 - 已验证有效）：
+>
+> SDK中已包含这些库，需要手动添加到CCS的产品发现路径：
+>
+> | 库名称  | 路径                                                    |
+> | ------- | ------------------------------------------------------- |
+> | mathlib | `C:\ti\MMWAVE_L_SDK_06_01_00_01\mathlib_c66x_3_1_2_1` |
+> | dsplib  | `C:\ti\MMWAVE_L_SDK_06_01_00_01\dsplib_c66x_3_4_0_0`  |
+>
+> **操作步骤**：
+>
+> ```
+> 1. 菜单栏：文件 → 首选项 → Code Composer Studio Settings...
+> 2. 在设置页面找到以下两项：
+>    - Compiler discovery-path
+>    - Product discovery-path
+> 3. 分别在这两项中添加以下路径：
+>    C:\ti\MMWAVE_L_SDK_06_01_00_01\mathlib_c66x_3_1_2_1
+>    C:\ti\MMWAVE_L_SDK_06_01_00_01\dsplib_c66x_3_4_0_0
+> 4. 点击应用/确定
+> 5. 重新导入工程，错误消失
+> ```
+>
+> **验证成功**：添加路径后可正常导入 `demo_in_cabin_sensing_6844_system` 工程。
 
-| 变量名 | 实际路径 |
-|--------|----------|
-| `MMWAVE_L_SDK_INSTALL_DIR` | `C:/ti/MMWAVE_L_SDK_06_01_00_01` |
-| `RADAR_TOOLBOX_INSTALL_DIR` | `C:/ti/radar_toolbox_3_30_00_06` |
-| `CCS_INSTALL_ROOT` | `C:/ti/ccs2040/ccs` |
-| `SYSCONFIG_ROOT` | `C:/ti/sysconfig_1.20.0` |
+### 1.2.2 CCS产品发现确认（无需手动配置变量）
 
-#### 配置方式
+> ✅ **重要说明**：CCS 20.4 Theia 通过 `Product discovery-path` 自动发现SDK和库，**无需手动配置路径变量**。
 
-**方式1: 工程属性配置**
-```
-右键工程 → Properties → Build → Build Variables
-添加上述变量
-```
+#### 确认产品已发现
 
-**方式2: 全局配置**
-```
-Window → Preferences → General → Workspace → Linked Resources
-添加路径变量
-```
+完成1.2.1的路径添加后，在 `Code Composer Studio Settings` → `Products` 页面应显示：
+
+| 产品名称 | 版本 | 路径 |
+|---------|------|------|
+| DSPLIB C66x | 3.4.0.0 | `C:/ti/MMWAVE_L_SDK_06_01_00_01/dsplib_c66x_3_4_0_0` |
+| MATHLIB C66x | 3.1.2.1 | `C:/ti/MMWAVE_L_SDK_06_01_00_01/mathlib_c66x_3_1_2_1` |
+| mmWave low-power SDK xWRL68xx | 6.1.0.01 | `C:/ti/MMWAVE_L_SDK_06_01_00_01` |
+| Radar Toolbox | 3.30.0.06 | `C:/ti/radar_toolbox_3_30_00_06` |
+| SysConfig | 1.20.0 | `C:/ti/sysconfig_1.20.0` |
+
+#### Variables页面
+
+`Code Composer Studio Settings` → `Variables` 页面：
+- **无需配置任何用户变量**
+- 列表为空是正常状态
+- 工程通过 `Product discovery-path` 自动获取所需路径
+
+> 💡 **旧版CCS说明**：网上部分教程提到手动配置 `MMWAVE_L_SDK_INSTALL_DIR` 等变量，这是旧版Eclipse-based CCS的做法。CCS 20.4 Theia版本不需要手动配置这些变量。
 
 ### 1.2.3 工程依赖关系
 
@@ -347,13 +411,28 @@ Build Summary:
     └── demo_in_cabin_sensing_6844_system.release.appimage  # ⭐ 最终固件
 ```
 
+> ⚠️ **重要说明：编译不会覆盖预编译固件**
+>
+> | 位置                 | 路径                                                       | 说明                 |
+> | -------------------- | ---------------------------------------------------------- | -------------------- |
+> | **编译输出**   | `{工程目录}/Release/`                                    | 您自己编译生成的固件 |
+> | **预编译固件** | `{Toolbox}/...AWRL6844_InCabin_Demos/prebuilt_binaries/` | TI提供的原始固件     |
+>
+> 两者位于完全不同的目录，**互不影响**。
+>
+> **使用建议**：
+>
+> - ✅ **验证编译能力**：使用 `Release/` 目录的编译固件
+> - ✅ **快速功能测试**：使用 `prebuilt_binaries/` 目录的预编译固件
+> - ✅ **后续开发修改**：使用自己编译的固件
+
 #### 输出文件说明
 
-| 文件 | 说明 |
-|------|------|
+| 文件           | 说明             |
+| -------------- | ---------------- |
 | `*.appimage` | 合并的可烧录固件 |
-| `*.out` | ELF调试文件 |
-| `*.map` | 内存映射文件 |
+| `*.out`      | ELF调试文件      |
+| `*.map`      | 内存映射文件     |
 
 ### 1.3.4 常见编译错误处理
 
@@ -412,6 +491,7 @@ C:\ti\radar_toolbox_3_30_00_06\source\ti\examples\Automotive_InCabin_Security_an
 ### 1.4.3 ⭐ 方法1：SDK Visualizer烧录（首选推荐）
 
 **启动Visualizer**：
+
 ```powershell
 Start-Process "C:\ti\MMWAVE_L_SDK_06_01_00_01\tools\visualizer\visualizer.exe"
 ```
@@ -427,6 +507,7 @@ Start-Process "C:\ti\MMWAVE_L_SDK_06_01_00_01\tools\visualizer\visualizer.exe"
 7. **恢复SOP开关** - 按提示切换回FUNCTIONAL MODE
 
 **优势**：
+
 - ✅ 图形化界面，无需记忆命令
 - ✅ 自动处理SOP模式切换
 - ✅ 烧录后可直接发送配置测试
@@ -437,7 +518,7 @@ Start-Process "C:\ti\MMWAVE_L_SDK_06_01_00_01\tools\visualizer\visualizer.exe"
 ### 1.4.4 方法2：arprog命令行烧录（自动化场景）
 
 > 💡 **说明**：arprog_cmdline_6844.exe是底层烧录工具，被项目flash_tool.py和SDK Visualizer封装调用。
-> 
+>
 > 如需直接使用命令行（如批量烧录、CI/CD集成），可参考以下命令。
 
 #### 简单烧录（不指定偏移量）
@@ -464,8 +545,8 @@ cd C:\ti\MMWAVE_L_SDK_06_01_00_01\tools\FlashingTool
   -cf    # ⭐ 关键参数！动态创建Flash Header
 ```
 
-> 🔥 **重要**：使用偏移量时**必须**加`-cf`参数，否则会烧录失败！
-> 
+> 🔥 **重要**：使用偏移量时**必须**加 `-cf`参数，否则会烧录失败！
+>
 > `-cf`参数作用：动态创建Flash Header，让设备知道App在0x42000位置
 
 #### 方法3：完整烧录（SBL + App）
@@ -483,27 +564,27 @@ cd C:\ti\MMWAVE_L_SDK_06_01_00_01\tools\FlashingTool
 
 ### 1.4.4 烧录参数说明
 
-| 参数 | 说明 | 示例 |
-|------|------|------|
-| `-p` | COM端口 | `-p COM3` |
-| `-f1` | 第一个固件文件 | `-f1 "xxx.appimage"` |
-| `-f2` | 第二个固件文件（可选） | `-f2 "app.appimage"` |
-| `-of1` | 第一个文件偏移量 | `-of1 8192`（0x2000） |
-| `-of2` | 第二个文件偏移量 | `-of2 270336`（0x42000） |
-| `-s` | 目标存储类型 | `-s SFLASH` |
-| `-c` | 发送break信号 | `-c` |
-| **`-cf`** | ⭐ **动态创建Flash Header** | `-cf` |
+| 参数              | 说明                             | 示例                       |
+| ----------------- | -------------------------------- | -------------------------- |
+| `-p`            | COM端口                          | `-p COM3`                |
+| `-f1`           | 第一个固件文件                   | `-f1 "xxx.appimage"`     |
+| `-f2`           | 第二个固件文件（可选）           | `-f2 "app.appimage"`     |
+| `-of1`          | 第一个文件偏移量                 | `-of1 8192`（0x2000）    |
+| `-of2`          | 第二个文件偏移量                 | `-of2 270336`（0x42000） |
+| `-s`            | 目标存储类型                     | `-s SFLASH`              |
+| `-c`            | 发送break信号                    | `-c`                     |
+| **`-cf`** | ⭐**动态创建Flash Header** | `-cf`                    |
 
 ### 1.4.5 烧录验证
 
 > ✅ **实测结论**（来源：`4-测试实验结果/1.烧录偏移量实际测试结果.md`）
 >
-> | 烧录方式 | 结果 | 说明 |
-> |---------|------|------|
-> | B组（不加偏移量） | ✅ 成功 | 雷达数据输出正常 |
-> | A组（加偏移量270336） | ❌ 失败 | 缺少`-cf`参数 |
+> | 烧录方式              | 结果    | 说明             |
+> | --------------------- | ------- | ---------------- |
+> | B组（不加偏移量）     | ✅ 成功 | 雷达数据输出正常 |
+> | A组（加偏移量270336） | ❌ 失败 | 缺少 `-cf`参数 |
 >
-> **推荐方法**：使用不加偏移量的简单烧录，或加偏移量时必须带`-cf`参数
+> **推荐方法**：使用不加偏移量的简单烧录，或加偏移量时必须带 `-cf`参数
 
 ```
 成功标志：
@@ -517,6 +598,7 @@ cd C:\ti\MMWAVE_L_SDK_06_01_00_01\tools\FlashingTool
 ### 1.4.6 烧录失败处理
 
 #### 错误：连接超时
+
 ```
 错误信息: "Connect to Device Timeout"
 
@@ -529,6 +611,7 @@ cd C:\ti\MMWAVE_L_SDK_06_01_00_01\tools\FlashingTool
 ```
 
 #### 错误：Flash Header解析失败
+
 ```
 错误信息: "Flash Header Parse Error"
 
@@ -564,12 +647,12 @@ cd C:\ti\MMWAVE_L_SDK_06_01_00_01\tools\FlashingTool
 
 #### 串口参数（实测确认）
 
-| 参数 | 数据端口 (COM4) | 配置端口 (COM3) |
-|------|---------|---------|
-| 波特率 | **1250000** | 115200 |
-| 数据位 | 8 | 8 |
-| 停止位 | 1 | 1 |
-| 校验 | None | None |
+| 参数   | 数据端口 (COM4)   | 配置端口 (COM3) |
+| ------ | ----------------- | --------------- |
+| 波特率 | **1250000** | 115200          |
+| 数据位 | 8                 | 8               |
+| 停止位 | 1                 | 1               |
+| 校验   | None              | None            |
 
 ### 1.5.3 CLI功能测试
 
@@ -590,23 +673,24 @@ cd C:\ti\MMWAVE_L_SDK_06_01_00_01\tools\FlashingTool
 
 > ✅ **已验证完成** - 以下工具均已测试正常
 
-| 工具 | 路径 | 状态 |
-|------|------|------|
-| SDK Visualizer | `C:\ti\MMWAVE_L_SDK_06_01_00_01\tools\visualizer\visualizer.exe` | ✅ 正常 |
-| Industrial Visualizer | `C:\ti\radar_toolbox_3_30_00_06\tools\visualizers\Applications_Visualizer\Industrial_Visualizer\Industrial_Visualizer.exe` | ✅ 正常 |
+| 工具                    | 路径                                                                                                                                     | 状态    |
+| ----------------------- | ---------------------------------------------------------------------------------------------------------------------------------------- | ------- |
+| SDK Visualizer          | `C:\ti\MMWAVE_L_SDK_06_01_00_01\tools\visualizer\visualizer.exe`                                                                       | ✅ 正常 |
+| Industrial Visualizer   | `C:\ti\radar_toolbox_3_30_00_06\tools\visualizers\Applications_Visualizer\Industrial_Visualizer\Industrial_Visualizer.exe`             | ✅ 正常 |
 | Body&Chassis Visualizer | `C:\ti\radar_toolbox_3_30_00_06\tools\visualizers\Applications_Visualizer\Body_And_Chassis_Visualizer\Body_and_Chassis_Visualizer.exe` | ✅ 正常 |
 
 **测试配置文件**（已验证可用）：
+
 - `C:\ti\MMWAVE_L_SDK_06_01_00_01\tools\visualizer\tmp\6844_profile_4T4R_tdm.cfg` ✅
 - `C:\ti\radar_toolbox_3_30_00_06\tools\mmwave_data_recorder\src\cfg\6844_profile_4T4R_tdm.cfg` ✅
 
 #### 支持的运行模式
 
-| 模式 | demoMode值 | 说明 |
-|------|-----------|------|
-| Intrusion Detection | 0 | 入侵检测 |
-| Seat Belt Reminder | 1 | 安全带提醒 |
-| Child Presence Detection | 2 | 儿童存在检测 |
+| 模式                     | demoMode值 | 说明         |
+| ------------------------ | ---------- | ------------ |
+| Intrusion Detection      | 0          | 入侵检测     |
+| Seat Belt Reminder       | 1          | 安全带提醒   |
+| Child Presence Detection | 2          | 儿童存在检测 |
 
 #### 模式切换命令
 
@@ -627,44 +711,46 @@ runningMode 0 0    # 入侵检测模式，使用ANN
 ### 1.6.1 配置文件的作用
 
 **雷达工作流程**：
+
 ```
 烧录固件(.appimage) → 发送配置文件(.cfg) → sensorStart → 雷达开始输出数据
 ```
 
 **配置文件内容说明**：
 
-| 配置项 | 作用 | CLI命令 |
-|---------|------|----------|
-| **Chirp配置** | 定义发射波形参数 | `profileCfg` |
-| **帧配置** | 定义帧结构 | `frameCfg` |
-| **通道配置** | TX/RX通道选择 | `channelCfg` |
-| **CFAR配置** | 目标检测参数 | `cfarCfg` |
-| **跑径模式** | CPD/SBR/入侵检测 | `runningMode` |
+| 配置项              | 作用             | CLI命令         |
+| ------------------- | ---------------- | --------------- |
+| **Chirp配置** | 定义发射波形参数 | `profileCfg`  |
+| **帧配置**    | 定义帧结构       | `frameCfg`    |
+| **通道配置**  | TX/RX通道选择    | `channelCfg`  |
+| **CFAR配置**  | 目标检测参数     | `cfarCfg`     |
+| **跑径模式**  | CPD/SBR/入侵检测 | `runningMode` |
 
 ### 1.6.2 SDK配置文件位置
 
 #### 通用配置文件
 
-| 文件 | 路径 | 用途 |
-|------|------|------|
-| `6844_profile_4T4R_tdm.cfg` | `C:\ti\MMWAVE_L_SDK_06_01_00_01\tools\visualizer\tmp\` | SDK Visualizer默认配置 ✅ |
-| `6844_profile_4T4R_tdm.cfg` | `C:\ti\radar_toolbox_3_30_00_06\tools\mmwave_data_recorder\src\cfg\` | 数据采集工具配置 ✅ |
-| `xWRL6844_4T4R_tdm.cfg` | `C:\ti\radar_toolbox_3_30_00_06\tools\Adc_Data_Capture_Tool_DCA1000_CLI\chirp_configs\` | ADC采集配置 |
+| 文件                          | 路径                                                                                      | 用途                      |
+| ----------------------------- | ----------------------------------------------------------------------------------------- | ------------------------- |
+| `6844_profile_4T4R_tdm.cfg` | `C:\ti\MMWAVE_L_SDK_06_01_00_01\tools\visualizer\tmp\`                                  | SDK Visualizer默认配置 ✅ |
+| `6844_profile_4T4R_tdm.cfg` | `C:\ti\radar_toolbox_3_30_00_06\tools\mmwave_data_recorder\src\cfg\`                    | 数据采集工具配置 ✅       |
+| `xWRL6844_4T4R_tdm.cfg`     | `C:\ti\radar_toolbox_3_30_00_06\tools\Adc_Data_Capture_Tool_DCA1000_CLI\chirp_configs\` | ADC采集配置               |
 
 #### InCabin Demo专用配置
 
-| 文件 | 路径 | 用途 |
-|------|------|------|
-| `cpd.cfg` | `C:\ti\radar_toolbox_3_30_00_06\tools\visualizers\AWRL6844_Incabin_GUI\src\chirpConfigs6844\` | 儿童存在检测(CPD) |
-| `sbr.cfg` | 同上 | 安全带提醒(SBR) |
-| `intrusion_detection.cfg` | 同上 | 入侵检测 |
-| `intrusion_detection_LP.cfg` | 同上 | 低功耗入侵检测 |
+| 文件                           | 路径                                                                                            | 用途              |
+| ------------------------------ | ----------------------------------------------------------------------------------------------- | ----------------- |
+| `cpd.cfg`                    | `C:\ti\radar_toolbox_3_30_00_06\tools\visualizers\AWRL6844_Incabin_GUI\src\chirpConfigs6844\` | 儿童存在检测(CPD) |
+| `sbr.cfg`                    | 同上                                                                                            | 安全带提醒(SBR)   |
+| `intrusion_detection.cfg`    | 同上                                                                                            | 入侵检测          |
+| `intrusion_detection_LP.cfg` | 同上                                                                                            | 低功耗入侵检测    |
 
 ### 1.6.3 使用SDK Visualizer发送配置（首选方法）
 
 > ⭐ **推荐工具**：SDK Visualizer是TI官方一体化工具，集成配置发送+可视化
 
 **启动工具**：
+
 ```powershell
 Start-Process "C:\ti\MMWAVE_L_SDK_06_01_00_01\tools\visualizer\visualizer.exe"
 ```
@@ -672,18 +758,19 @@ Start-Process "C:\ti\MMWAVE_L_SDK_06_01_00_01\tools\visualizer\visualizer.exe"
 **发送配置步骤**：
 
 1. ✅ **连接串口**
+
    - CLI Port: COM3 @ 115200
    - Data Port: COM4 @ 1250000
-
 2. ✅ **加载配置文件**
+
    - 点击 "Load Config" 按钮
    - 选择 `.cfg` 文件
-
 3. ✅ **发送配置**
+
    - 点击 "Send Config" 按钮
    - 观察控制台输出 "Done"
-
 4. ✅ **验证数据输出**
+
    - 切换到 Plots 页签
    - 应看到点云数据实时显示
 
@@ -693,24 +780,25 @@ Start-Process "C:\ti\MMWAVE_L_SDK_06_01_00_01\tools\visualizer\visualizer.exe"
 
 **工具说明**：
 
-| 工具 | 用途 |
-|------|------|
-| `radar_test_gui.py` | 配置文件测试GUI工具 |
-| `雷达配置文件深度分析_v2.0_Part1.md` | 配置参数详细解释 |
-| `雷达配置文件深度分析_v2.0_Part2.md` | 配置模板和最佳实践 |
-| `TI_6844_profile_4T4R_tdm.cfg` | 标准TI配置文件样本 |
+| 工具                                   | 用途                |
+| -------------------------------------- | ------------------- |
+| `radar_test_gui.py`                  | 配置文件测试GUI工具 |
+| `雷达配置文件深度分析_v2.0_Part1.md` | 配置参数详细解释    |
+| `雷达配置文件深度分析_v2.0_Part2.md` | 配置模板和最佳实践  |
+| `TI_6844_profile_4T4R_tdm.cfg`       | 标准TI配置文件样本  |
 
 **配置文件工具对照表**：
 
-| 工具 | 用途 | 适用场景 |
-|------|------|----------|
-| **SDK Visualizer** | 发送配置 + 可视化 | 日常开发、快速验证 |
-| **05-雷达配置参数研究** | 参数分析 + 测试 | 配置调优、参数研究 |
-| **InCabin GUI** | Demo专用配置 | CPD/SBR/入侵检测演示 |
+| 工具                          | 用途              | 适用场景             |
+| ----------------------------- | ----------------- | -------------------- |
+| **SDK Visualizer**      | 发送配置 + 可视化 | 日常开发、快速验证   |
+| **05-雷达配置参数研究** | 参数分析 + 测试   | 配置调优、参数研究   |
+| **InCabin GUI**         | Demo专用配置      | CPD/SBR/入侵检测演示 |
 
 ### 1.6.5 验证雷达数据输出
 
 **成功标志**：
+
 ```
 ✅ CLI端口返回 "Done" 响应
 ✅ 数据端口有二进制数据输出
@@ -720,11 +808,11 @@ Start-Process "C:\ti\MMWAVE_L_SDK_06_01_00_01\tools\visualizer\visualizer.exe"
 
 **常见失败原因**：
 
-| 现象 | 原因 | 解决方法 |
-|------|------|----------|
-| 配置发送失败 | 固件不匹配 | 确认固件支持该配置 |
-| 无数据输出 | 未执行sensorStart | 检查配置文件是否包含sensorStart |
-| 波特率错误 | 数据端口设置错误 | 使用 **1250000** 而非921600 |
+| 现象         | 原因              | 解决方法                         |
+| ------------ | ----------------- | -------------------------------- |
+| 配置发送失败 | 固件不匹配        | 确认固件支持该配置               |
+| 无数据输出   | 未执行sensorStart | 检查配置文件是否包含sensorStart  |
+| 波特率错误   | 数据端口设置错误  | 使用**1250000** 而非921600 |
 
 > 📝 **实测结果参考**：`项目文档/4-测试实验结果/2.雷达配置实际测试结果.md`
 
@@ -794,35 +882,35 @@ Start-Process "C:\ti\MMWAVE_L_SDK_06_01_00_01\tools\visualizer\visualizer.exe"
 
 ### 开发环境检查
 
-| 序号 | 检查项 | 路径 | 状态 |
-|------|--------|------|------|
-| 1 | CCS 20.4 (ccs2040) 已安装 | `C:\ti\ccs2040` | ✅ 已完成 |
-| 2 | MMWAVE_L_SDK_06_01_00_01 已安装 | `C:\ti\MMWAVE_L_SDK_06_01_00_01` | ✅ 已完成 |
-| 3 | Radar Toolbox 3.30.00.06 已安装 | `C:\ti\radar_toolbox_3_30_00_06` | ✅ 已完成 |
-| 4 | 烧录工具 已就绪 | SDK Visualizer(推荐) + flash_tool.py | ✅ 已完成 |
-| 5 | SysConfig 1.20.0 已安装 | `C:\ti\sysconfig_1.20.0` | ✅ 已完成 |
-| 6 | XDS110驱动 已安装 | (随CCS安装) | ✅ 已完成 |
+| 序号 | 检查项                          | 路径                                 | 状态      |
+| ---- | ------------------------------- | ------------------------------------ | --------- |
+| 1    | CCS 20.4 (ccs2040) 已安装       | `C:\ti\ccs2040`                    | ✅ 已完成 |
+| 2    | MMWAVE_L_SDK_06_01_00_01 已安装 | `C:\ti\MMWAVE_L_SDK_06_01_00_01`   | ✅ 已完成 |
+| 3    | Radar Toolbox 3.30.00.06 已安装 | `C:\ti\radar_toolbox_3_30_00_06`   | ✅ 已完成 |
+| 4    | 烧录工具 已就绪                 | SDK Visualizer(推荐) + flash_tool.py | ✅ 已完成 |
+| 5    | SysConfig 1.20.0 已安装         | `C:\ti\sysconfig_1.20.0`           | ✅ 已完成 |
+| 6    | XDS110驱动 已安装               | (随CCS安装)                          | ✅ 已完成 |
 
 ### 工程编译检查
 
-| 序号 | 检查项 | 状态 |
-|------|--------|------|
-| 1 | InCabin Demo工程已导入 | ☐ |
-| 2 | 路径变量已配置 | ☐ |
-| 3 | 编译无错误 | ☐ |
-| 4 | 生成.appimage文件 | ☐ |
+| 序号 | 检查项                 | 状态 |
+| ---- | ---------------------- | ---- |
+| 1    | InCabin Demo工程已导入 | ☐   |
+| 2    | 路径变量已配置         | ☐   |
+| 3    | 编译无错误             | ☐   |
+| 4    | 生成.appimage文件      | ☐   |
 
 ### 硬件验证检查
 
 > ✅ **已全部验证完成** - 详见项目测试记录
 
-| 序号 | 检查项 | 状态 | 验证来源 |
-|------|--------|------|----------|
-| 1 | EVM正确连接 | ✅ 已完成 | `03-固件烧录测试/AWRL6844烧录测试完整报告_2025-12-19.md` |
-| 2 | 串口识别正常 | ✅ 已完成 | COM3(烧录), COM4(数据输出), 波特率1250000 |
-| 3 | 固件烧录成功 | ✅ 已完成 | `4-测试实验结果/1.烧录偏移量实际测试结果.md` |
-| 4 | CLI命令响应正常 | ✅ 已完成 | `2-开发记录/2025-12-23/2025-12-23_固件及烧录完整指南.md` |
-| 5 | 可视化工具测试正常 | ✅ 已完成 | visualizer.exe / Industrial_Visualizer.exe 均已验证 |
+| 序号 | 检查项             | 状态      | 验证来源                                                   |
+| ---- | ------------------ | --------- | ---------------------------------------------------------- |
+| 1    | EVM正确连接        | ✅ 已完成 | `03-固件烧录测试/AWRL6844烧录测试完整报告_2025-12-19.md` |
+| 2    | 串口识别正常       | ✅ 已完成 | COM3(烧录), COM4(数据输出), 波特率1250000                  |
+| 3    | 固件烧录成功       | ✅ 已完成 | `4-测试实验结果/1.烧录偏移量实际测试结果.md`             |
+| 4    | CLI命令响应正常    | ✅ 已完成 | `2-开发记录/2025-12-23/2025-12-23_固件及烧录完整指南.md` |
+| 5    | 可视化工具测试正常 | ✅ 已完成 | visualizer.exe / Industrial_Visualizer.exe 均已验证        |
 
 ---
 
@@ -831,36 +919,38 @@ Start-Process "C:\ti\MMWAVE_L_SDK_06_01_00_01\tools\visualizer\visualizer.exe"
 ### ✅ 环境搭建全部完成
 
 > **验证状态**：所有检查项已在项目开发过程中完成验证
-> 
+>
 > **参考文档**：
+>
 > - `项目文档/3-固件工具/03-固件烧录测试/AWRL6844烧录测试完整报告_2025-12-19.md`
 > - `项目文档/4-测试实验结果/1.烧录偏移量实际测试结果.md`
 > - `项目文档/2-开发记录/2025-12-23/2025-12-23_固件及烧录完整指南.md`
 
 ### 完成输出物
 
-| 输出物 | 说明 | 状态 |
-|--------|------|------|
-| 开发环境 | CCS 20.4 + SDK 06.01 + Toolbox 3.30 | ✅ 已完成 |
-| 烧录工具 | arprog_cmdline_6844.exe（TI官方推荐） | ✅ 已验证 |
-| 硬件连接 | EVM连接、COM口识别、XDS110驱动 | ✅ 已验证 |
-| 固件烧录 | B组命令（不加偏移量）成功 | ✅ 已验证 |
-| CLI通信 | sensorStop/sensorStart/help命令 | ✅ 已验证 |
+| 输出物     | 说明                                       | 状态      |
+| ---------- | ------------------------------------------ | --------- |
+| 开发环境   | CCS 20.4 + SDK 06.01 + Toolbox 3.30        | ✅ 已完成 |
+| 烧录工具   | arprog_cmdline_6844.exe（TI官方推荐）      | ✅ 已验证 |
+| 硬件连接   | EVM连接、COM口识别、XDS110驱动             | ✅ 已验证 |
+| 固件烧录   | B组命令（不加偏移量）成功                  | ✅ 已验证 |
+| CLI通信    | sensorStop/sensorStart/help命令            | ✅ 已验证 |
 | 可视化工具 | visualizer.exe / Industrial_Visualizer.exe | ✅ 已验证 |
 
 ### 关键结论（来自实测）
 
-| 项目 | 结论 |
-|------|------|
-| **推荐烧录工具** | ⭐ SDK Visualizer（首选）/ flash_tool.py（自动化） |
-| **推荐烧录方式** | Visualizer一键烧录 或 B组命令（不加偏移量） |
-| **数据端口** | COM4，波特率 1250000 |
-| **配置端口** | COM3，波特率 115200 |
+| 项目                   | 结论                                                  |
+| ---------------------- | ----------------------------------------------------- |
+| **推荐烧录工具** | ⭐ SDK Visualizer（首选）/ flash_tool.py（自动化）    |
+| **推荐烧录方式** | Visualizer一键烧录 或 B组命令（不加偏移量）           |
+| **数据端口**     | COM4，波特率 1250000                                  |
+| **配置端口**     | COM3，波特率 115200                                   |
 | **可用配置文件** | `6844_profile_4T4R_tdm.cfg`（SDK和Toolbox版本均可） |
 
 ### 下一章预告
 
 **第2章：人存检测验证**
+
 - 分析InCabin Demo的人存检测实现
 - 验证occupancyClassifier模块
 - 理解TLV输出格式
