docs: 丰富实施大纲-添加TI官方文档参考与价值标注
主要更新:
- 第5章: 添加Detection Layer Tuning Guide参考
- 第9章: 添加5篇TI 3D People Tracking官方文档
- 附录E.2.4: 新增3D People Tracking文档索引
- 附录E.3: 更新章节-参考文档对应表
- 所有参考资料标注⭐价值等级(⭐-⭐⭐⭐⭐⭐)

--- a/项目文档/3-固件工具/08-AWRL6844雷达健康检测实现方案/AWRL6844雷达健康检测-03-实施目录大纲.md
+++ b/项目文档/3-固件工具/08-AWRL6844雷达健康检测实现方案/AWRL6844雷达健康检测-03-实施目录大纲.md
@@ -225,10 +225,13 @@ project-code/AWRL6844_HealthDetect/
 
 > **重要**：以下TI官方文档包含经过验证的参数调优经验，开发时必须参考！
 
-| 文档 | 知识库位置 | 关键内容 |
-|------|-----------|---------|
-| **Point Cloud Tuning Guide** | `知识库/知识库PDF转机器可读文件/AWRL6844_CPD_&_SBR_Point_Cloud_Tuning_Guide.md` | 相位校准、传感器安装位置、sensorPosition CLI |
-| **Parameter Tuning Guide** | `知识库/知识库PDF转机器可读文件/Parameter_Tuning_Guide_for_Intrusion_Detection_Demo.md` | CFAR配置、杂波移除、天线模式补偿 |
+| 文档 | 知识库位置 | 价值等级 | 关键内容 |
+|------|-----------|---------|---------|
+| **Point Cloud Tuning Guide** | `知识库/知识库PDF转机器可读文件/AWRL6844_CPD_&_SBR_Point_Cloud_Tuning_Guide.md` | ⭐⭐⭐⭐⭐ **最高** | 相位校准、传感器安装位置、sensorPosition CLI |
+| **Parameter Tuning Guide** | `知识库/知识库PDF转机器可读文件/Parameter_Tuning_Guide_for_Intrusion_Detection_Demo.md` | ⭐⭐⭐⭐⭐ **最高** | CFAR配置、杂波移除、天线模式补偿 |
+| **3D Detection Layer Tuning** | `知识库/知识库PDF转机器可读文件/3D_people_tracking_detection_layer_tuning_guide.md` | ⭐⭐⭐⭐ **高** | 更详细的CFAR配置、静态杂波移除、角度估计 |
+| **TI校准指南** | `知识库/知识库PDF转机器可读文件/TI 低功耗毫米波雷达传感器中的校准 (Rev. B).md` | ⭐⭐⭐ **中等** | 运行时校准流程、OLPC/CLPC功率控制 |
+| **AOA校正DPU** | `知识库/知识库PDF转机器可读文件/AOA_SVC_DPU_Implementation_Details.md` | ⭐⭐⭐ **中等** | 角度估计校正、Steering Vector方法（角度问题时参考） |
 
 **必须参考的调优步骤**：
 
@@ -238,11 +241,17 @@ project-code/AWRL6844_HealthDetect/
 
 2. **CFAR参数配置**
    - 参考 Parameter Tuning Guide 的 Section 2.2 CFAR Configuration
+   - 参考 3D Detection Layer Tuning 的 Section 2.2 Dynamic Scene CFAR Configuration
    - 调整检测阈值减少漏检/误检
 
 3. **杂波移除配置**
    - 参考 Parameter Tuning Guide 的 Section 2.3 Clutter Removal Configuration
+   - 参考 3D Detection Layer Tuning 的 Section 1.1.2 Static Clutter Removal
    - 静态杂波过滤参数优化
+
+4. **运行时校准（可选）**
+   - 参考 TI校准指南 的 Section 6.2 运行时操作软件序列
+   - 温度变化时的校准补偿
 
 ---
 
@@ -458,9 +467,39 @@ project-code/AWRL6844_HealthDetect/
 
 | 文件 | 操作 | 来源/参考 | 依赖 | 用途 |
 |------|------|----------|------|------|
-| `src/people_count.h` | 🆕 新建 | 自主设计 | SDK点云结构 | 人数统计接口 |
-| `src/people_count.c` | 🆕 新建 | 自主设计+DBSCAN算法 | SDK点云结构 | 人数统计实现 |
+| `src/people_count.h` | 🆕 新建 | 参考TI Group Tracker | SDK点云结构 | 人数统计接口 |
+| `src/people_count.c` | 🆕 新建 | 参考TI 3D People Tracking | SDK点云结构 | 人数统计实现 |
 | `src/health_detect.c` | 🔧 修改 | 第8章产物 | people_count.* | 集成人数统计 |
+
+#### ⭐ TI官方人数统计/跟踪参考资料（关键必读）
+
+> **重要**：以下文档是TI官方的人数跟踪实现指南，包含完整的算法和参数调优经验！
+
+| 文档 | 知识库位置 | 价值等级 | 关键内容 |
+|------|-----------|---------|---------|
+| **3D_people_tracking_demo_implementation_guide.md** | `知识库/知识库PDF转机器可读文件/` | ⭐⭐⭐⭐⭐ **最高** | SDK处理链架构、DPU设计、执行流程、任务模型 |
+| **3D_people_tracking_tracker_layer_tuning_guide.md** | `知识库/知识库PDF转机器可读文件/` | ⭐⭐⭐⭐⭐ **最高** | Tracker参数调优、状态转换、Ghost问题解决 |
+| **3D_people_tracking_detection_layer_tuning_guide.md** | `知识库/知识库PDF转机器可读文件/` | ⭐⭐⭐⭐ **高** | 检测层CFAR配置、角度估计、静态杂波移除 |
+| **people_counting_customization_guide.md** | `知识库/知识库PDF转机器可读文件/` | ⭐⭐⭐⭐ **高** | 常见问题解决（太少/太多检测、鬼影） |
+| **Tracking_radar_targets_with_multiple_reflection_points.md** | `知识库/知识库PDF转机器可读文件/` | ⭐⭐⭐⭐ **高** | Group Tracker算法详解、实现细节 |
+
+**必须参考的核心内容**：
+
+1. **Group Tracker算法**（Tracking_radar_targets...）
+   - Point Cloud Tagging（点云标记）
+   - Predict → Associate → Allocate → Update → Maintenance 流程
+   - 状态机设计（DETECT → ACTIVE → FREE）
+
+2. **Tracker参数调优**（tracker_layer_tuning_guide）
+   - Scenery Parameters（场景边界）
+   - Gating Parameters（门限参数）
+   - Allocation Parameters（分配参数）
+   - State Transition Parameters（状态转换）
+
+3. **常见问题解决**（people_counting_customization_guide）
+   - 太少检测：降低SNR阈值、Points阈值
+   - 太多检测（Ghost）：调整Allocation参数、增加Det2Active阈值
+   - 多人粘连：调整Gating Volume/Length/Width
 
 ---
 
@@ -1466,19 +1505,59 @@ AWRL6844_HealthDetect/
 
 ---
 
+### E.2.4 ⭐ 3D People Tracking 官方文档（第9章关键）
+
+> **位置**：`知识库/知识库PDF转机器可读文件/`
+> **重要性**：这些是TI官方的人数跟踪算法文档，第9章开发必读！
+
+| 文档 | 知识库位置 | 参考价值 | 适用章节 |
+|------|-----------|---------|---------|
+| **3D_people_tracking_demo_implementation_guide.md** | `知识库/知识库PDF转机器可读文件/` | ⭐⭐⭐⭐⭐ **最高** | 📖 **第9章核心**：SDK处理链架构、DPU设计、执行流程 |
+| **3D_people_tracking_tracker_layer_tuning_guide.md** | `知识库/知识库PDF转机器可读文件/` | ⭐⭐⭐⭐⭐ **最高** | 📖 **第9章核心**：Tracker参数调优、状态机、Ghost问题 |
+| **3D_people_tracking_detection_layer_tuning_guide.md** | `知识库/知识库PDF转机器可读文件/` | ⭐⭐⭐⭐ **高** | 📖 **第5章/第9章**：检测层CFAR、静态杂波移除 |
+| **people_counting_customization_guide.md** | `知识库/知识库PDF转机器可读文件/` | ⭐⭐⭐⭐ **高** | 📖 **第9章**：常见问题解决方案 |
+| **Tracking_radar_targets_with_multiple_reflection_points.md** | `知识库/知识库PDF转机器可读文件/` | ⭐⭐⭐⭐ **高** | 📖 **第9章**：Group Tracker算法详解 |
+
+**关键文档内容速览**：
+
+| 文档 | 核心章节 | 直接可用内容 |
+|------|---------|-------------|
+| **implementation_guide** | Section 4 DPC | 数据处理链架构、DPU组织 |
+| **implementation_guide** | Section 1.7 Execution flow | 初始化→配置→每帧处理流程 |
+| **tracker_layer_tuning** | Section 2 Group Tracker Module | Predict→Associate→Allocate→Update流程 |
+| **tracker_layer_tuning** | Section 3 Configuration | Scenery/Gating/Allocation/StateTransition参数 |
+| **tracker_layer_tuning** | Section 4 Tuning | 常见问题调优指南 |
+| **Tracking_radar_targets** | Section 2 Group Tracking | 完整算法原理和实现细节 |
+
+---
+
+### E.2.5 其他有价值的知识库文档
+
+> **位置**：`知识库/知识库PDF转机器可读文件/`
+
+| 文档 | 参考价值 | 适用场景 |
+|------|---------|---------|
+| **TI 低功耗毫米波雷达传感器中的校准 (Rev. B).md** | ⭐⭐⭐ 中等 | 运行时校准、温度补偿（第5章深度优化） |
+| **AOA_SVC_DPU_Implementation_Details.md** | ⭐⭐⭐ 中等 | 角度估计校正（第5章角度问题时参考） |
+| **AWR6843_CPD_with_Classification_Setup_Guide.md** | ⭐⭐ 低 | 天线几何配置参考 |
+| **Beamforming_in_LRPD.md** | ⭐⭐ 低 | TX波束成形（深度优化时参考） |
+| **通过单芯片 60GHz 毫米波雷达传感器...** | ⭐ 最低 | 背景知识了解 |
+
+---
+
 ### E.3 参考资料与章节对应关系
 
 | 章节 | 必读参考 | 备用参考 |
 |------|---------|--------|
-| **第1章 环境搭建** | SDK安装文档、InCabin Demo User Guide | Migration索引(硬件对比) |
+| **第1章 环境搭建** | SDK安装文档、InCabin Demo User Guide | Migration索引(硬件对比)、TI校准指南 |
 | **第2章 人存检测** | InCabin Demo源码 | motion_detect.c |
 | **第3章 姿态检测** | ⭐ **pose.c/h**、**数据集** | dpc.c |
 | **第4章 跌倒检测** | ⭐ **fall_detection.html**、pose.c | Migration Part3(相位) |
-| **第5章 杂波移除** | ⭐ **Point Cloud Tuning Guide**、**Parameter Tuning Guide** Section 2.2-2.3 | SDK MTI参数 |
+| **第5章 杂波移除** | ⭐ **Point Cloud Tuning Guide**、**Parameter Tuning Guide**、**3D Detection Layer Tuning** | TI校准指南、AOA校正DPU |
 | **第6章 背景学习** | ⭐ **Parameter Tuning Guide** (Reference Zone概念) | 自主设计扩展 |
 | **第7章 区域划分** | ⭐ **zoneDefinitionGenTool.xlsx**、**Parameter Tuning Guide** Section 2.3.1 | cuboidDef格式参考 |
 | **第8章 呼吸检测** | IWR6843 Vital Signs Demo | - |
-| **第9章 人数统计** | SDK 3D_people_tracking | - |
+| **第9章 人数统计** | ⭐ **3D_people_tracking_demo_implementation_guide**、**tracker_layer_tuning**、**people_counting_customization** | Tracking_radar_targets详解 |
 | **第10章 综合测试** | ⭐ **数据集**、**CPD_SBR_Test_Results**、**实验案例** | 验收标准参考 |
 
 ---
